refact: ocr 처리 로직 단순화